[gd_scene load_steps=19 format=3 uid="uid://c10hjg8ixjux5"]

[ext_resource type="Script" path="res://script/LoadScene.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dqs6ndo2fefjx" path="res://fonts/AuraDianZhenSong-2.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://b5274asvj4k8h" path="res://images/LoadingClock.png" id="3"]
[ext_resource type="Texture2D" uid="uid://03ribww3f7l5" path="res://images/4.png" id="4_xsbbi"]
[ext_resource type="Texture2D" uid="uid://b84b6gcu1auhp" path="res://images/6.png" id="5_u4ic5"]
[ext_resource type="Texture2D" uid="uid://c82nkw5u3indm" path="res://images/8.png" id="6_2yefn"]
[ext_resource type="Texture2D" uid="uid://cxo3m7opmqwhy" path="res://images/9.png" id="7_8ncfr"]
[ext_resource type="Texture2D" uid="uid://cbto6mm7ikjv4" path="res://images/10.png" id="8_tlwkr"]
[ext_resource type="Texture2D" uid="uid://icuylahv58sm" path="res://images/21.png" id="9_wbyj2"]
[ext_resource type="Texture2D" uid="uid://dmnxp5khk8w42" path="res://images/22.png" id="10_cfgl2"]
[ext_resource type="Texture2D" uid="uid://beewi6vixt3pc" path="res://images/25.png" id="11_glyd5"]
[ext_resource type="AudioStream" uid="uid://dl0lhh71bdqvx" path="res://sounds/switch.wav" id="12_t72re"]
[ext_resource type="Texture2D" uid="uid://dhwtltp3uwfkx" path="res://images/nspp.png" id="13_jdk20"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nb4nd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xsbbi")
}, {
"duration": 1.0,
"texture": ExtResource("5_u4ic5")
}, {
"duration": 1.0,
"texture": ExtResource("6_2yefn")
}, {
"duration": 1.0,
"texture": ExtResource("7_8ncfr")
}, {
"duration": 1.0,
"texture": ExtResource("8_tlwkr")
}, {
"duration": 1.0,
"texture": ExtResource("9_wbyj2")
}, {
"duration": 1.0,
"texture": ExtResource("10_cfgl2")
}, {
"duration": 1.0,
"texture": ExtResource("11_glyd5")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="Animation" id="Animation_3mehv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nspp:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LoadingClock:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_t8dmt"]
resource_name = "new_animation"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nspp:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3, 5.13333, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eokbj"]
resource_name = "new_animation_2"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingClock:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8lwol"]
_data = {
"RESET": SubResource("Animation_3mehv"),
"new_animation": SubResource("Animation_t8dmt"),
"new_animation_2": SubResource("Animation_eokbj")
}

[node name="LoadScene" type="Node2D"]
script = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 376.0
offset_top = 298.0
offset_right = 776.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 31
horizontal_alignment = 1

[node name="LoadingClock" type="Sprite2D" parent="."]
visible = false
position = Vector2(1132.31, 629.312)
scale = Vector2(0.921893, 0.921893)
texture = ExtResource("3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 328)

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(571, 328)
sprite_frames = SubResource("SpriteFrames_nb4nd")
frame = 7
frame_progress = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_t72re")

[node name="Nspp" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(578, 326)
scale = Vector2(0.877348, 0.826309)
texture = ExtResource("13_jdk20")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8lwol")
}

[node name="Timer3" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
